--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.5</version>
+        <version>3.5.0</version>
         <relativePath/>
     </parent>
     <groupId>com.uber.api</groupId>
@@ -17,17 +17,16 @@
 
     <properties>
         <java.version>17</java.version>
-        <spring-kafka.version>2.8.2</spring-kafka.version>
-        <avro.version>1.11.0</avro.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <!-- REMOVE THIS LINE - Let Spring Boot manage Kafka version -->
+        <!-- <spring-kafka.version>2.8.2</spring-kafka.version> -->
+        <avro.version>1.11.0</avro.version>
     </properties>
 
     <modules>
         <module>shared</module>
         <module>customer-service</module>
-        <module>payment-service</module>
-        <module>driver-service</module>
     </modules>
 
     <dependencies>
